@@ -1,8 +1,10 @@
 package io.github.opendonationassistant.playlist.view;
 
+import io.github.opendonationassistant.commons.logging.ODALogger;
 import io.github.opendonationassistant.commons.micronaut.BaseController;
 import io.github.opendonationassistant.integration.youtube.PlaylistItem;
 import io.github.opendonationassistant.integration.youtube.PlaylistItemList;
+import io.github.opendonationassistant.integration.youtube.Snippet;
 import io.github.opendonationassistant.integration.youtube.Video;
 import io.github.opendonationassistant.integration.youtube.YouTube;
 import io.github.opendonationassistant.media.dto.Playlist;
@@ -16,21 +18,25 @@ import io.micronaut.http.annotation.PathVariable;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.rules.SecurityRule;
+import jakarta.inject.Inject;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 @Controller
 public class PlaylistController extends BaseController {
 
-  private Logger log = LoggerFactory.getLogger(PlaylistController.class);
+  private ODALogger log = new ODALogger(this);
 
   private final YouTube youTube;
   private final PlaylistRepository playlistRepository;
 
+  @Inject
   public PlaylistController(
     YouTube youTube,
     PlaylistRepository playlistRepository
@@ -76,44 +82,43 @@ public class PlaylistController extends BaseController {
   @Get("/media/playlists/{playlistId}")
   @Secured(SecurityRule.IS_ANONYMOUS)
   public HttpResponse<Playlist> get(@PathVariable String playlistId) {
-    log.debug("Getting items from playlist with id : {}", playlistId);
+    log.debug("Getting items from playlist", Map.of("playlistId", playlistId));
     PlaylistItemList page = youTube.playlistItems(playlistId, "");
-    List<PlaylistItem> videos = page.getItems();
-    String nextPage = page.getNextPageToken();
+    List<PlaylistItem> videos = Optional.ofNullable(page.items()).orElse(
+      new ArrayList<>()
+    );
+    String nextPage = page.nextPageToken();
     while (Objects.nonNull(nextPage)) {
       log.debug(
-        "Getting page of items from playlist with id : {} and page token: {}",
-        playlistId,
-        nextPage
+        "Getting page of items from playlist",
+        Map.of("playlistId", playlistId, "nextPage", nextPage)
       );
       page = youTube.playlistItems(playlistId, nextPage);
-      nextPage = page.getNextPageToken();
-      videos.addAll(page.getItems());
+      nextPage = page.nextPageToken();
+      videos.addAll(page.items());
     }
-    log.debug("Playlist videos: {}", videos);
+    log.debug("Loaded playlist", Map.of("videos", videos));
     List<Video> mappedVideos = new ArrayList<>(
       videos
         .stream()
-        .map(item -> {
-          Video video = new Video();
-          video.setId(item.getSnippet().getResourceId().getVideoId());
-          video.setSnippet(item.getSnippet());
-          return video;
+        .map(item -> item.snippet())
+        .map(snippet -> {
+          String videoId = Optional.ofNullable(snippet.resourceId())
+            .map(resourceId -> resourceId.videoId())
+            .orElseThrow();
+          return new Video(videoId, snippet, null, null);
         })
         .toList()
     );
     Collections.shuffle(mappedVideos);
-    log.debug("Mapped videos: {}", mappedVideos);
-    String title = youTube
-      .playlistInfo(playlistId)
-      .getItems()
-      .get(0)
-      .getSnippet()
-      .getTitle();
-    var playlist = new Playlist();
-    playlist.setTitle(title);
-    playlist.setItems(mappedVideos);
-    log.debug("Playlist: {}", playlist);
+    log.debug("Mapped videos", Map.of("videos", mappedVideos));
+    String title = Optional.ofNullable(youTube.playlistInfo(playlistId).items())
+      .map(items -> items.getFirst())
+      .map(PlaylistItem::snippet)
+      .map(Snippet::title)
+      .orElse("Playlist");
+    var playlist = new Playlist(mappedVideos, title);
+    log.debug("Playlist", Map.of("playlist", playlist));
     return HttpResponse.ok(playlist);
   }
 }
